fix: add padding to top of scholarship persons to prevent year from being pushed on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1263,3 +1263,7 @@ input[type=number] {
   max-width: 250px;
   max-height: 250px;
 }
+
+.achance {
+    padding-top: 2rem;
+}
